complete privacy policy

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -36,7 +36,7 @@
                 Privacy Policy
             </h2>            
         </section>
-        <article>
+        <article class="secondary-content">
             <p>
                 Website Terms of Use
               </p>
