--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/secondary-style.css"/>
-    <meta charset="UTF-8"/>
-    <title>Privacy Policy - Run Buddy</title>     
+      <link rel="stylesheet" href="assets/css/style.css" />
+      <link rel="stylesheet" href="assets/css/secondary-style.css"/>
+      <meta charset="UTF-8"/>
+      <meta name="viewports" content="width=device-width, initial-scale=1.0" />
+      <title>Privacy Policy - Run Buddy</title>     
     </head>
     <body>
         <header>
