create better aesthetics

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <h3>Get Started Today</h3>
                 <p>Fill out this form and one of our trainers will schedule a consult</p>
                 <!-- Add form element -->
-                <form class="form-input">
+                <form class="form">
                     <label for="name">Enter full name:</label><br/>
                     <input type="text" placeholder="Your Name" name="name" id="name" /><br/>
                     <label for="email">Enter email address:</label><br/>
